// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > should render 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-8 h-8 border-theme-secondary-200 dark:border-black"
  />
</div>
`;

exports[`Spinner > should render a danger color 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-8 h-8 border-theme-secondary-200 dark:border-black border-l-theme-danger-400 dark:border-l-theme-danger-400"
  />
</div>
`;

exports[`Spinner > should render a hint color 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-8 h-8 border-theme-secondary-200 dark:border-black border-l-theme-hint-500 dark:border-l-theme-hint-500"
  />
</div>
`;

exports[`Spinner > should render a info color 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-8 h-8 border-theme-secondary-200 dark:border-black border-l-theme-primary-600 dark:border-l-theme-primary-600"
  />
</div>
`;

exports[`Spinner > should render a large one 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-12 h-12 border-theme-secondary-200 dark:border-black"
  />
</div>
`;

exports[`Spinner > should render a small one 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-5 h-5 border-theme-secondary-200 dark:border-black"
  />
</div>
`;

exports[`Spinner > should render a success color 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-8 h-8 border-theme-secondary-200 dark:border-black border-l-theme-success-600 dark:border-l-theme-success-600"
  />
</div>
`;

exports[`Spinner > should render a warning color 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-8 h-8 border-theme-secondary-200 dark:border-black border-l-theme-warning-600 dark:border-l-theme-warning-600"
  />
</div>
`;

exports[`Spinner > should render a warning-alt color 1`] = `
<div>
  <div
    class="animate-spin rounded-full border-[5px] flex-shrink-0 w-8 h-8 border-theme-warning-200 dark:border-theme-secondary-800 border-l-theme-warning-900 dark:border-l-theme-warning-600"
  />
</div>
`;
